--- a/public/tpl/footer.html.twig
+++ b/public/tpl/footer.html.twig
@@ -1,4 +1,36 @@
-<footer>
-  Footer
 
-</footer>
+  <div class="row">
+
+    <div id="footer-title" class="col-12">
+      Cafe Latte © 2019
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-4">
+      <h2>Réseau sociaux</h2>
+      <ul>
+        <li>Facebook</li>
+        <li>Twitter</li>
+        <li>Linked'In</li>
+      </ul>
+
+    </div>
+
+    <div class="col-4">
+      <h2>New's letter</h2>
+      <form method="post" action="newsletter.html">
+        <input type="email" name="email" placeholder="r.bidochon@fluideglacial.fr">
+        <input type="submit" value=">">
+      </form>
+    </div>
+
+    <div class="col-4">
+      <h2>A propos</h2>
+      <p>Abeas corpus est touti fruti. Sic transit gloria mundi. Nunc est bibendum.</p>
+      <p>Ils mangèrent des agneaux, des orangs outang. Et le seigneur fut content</p>
+    </div>
+
+  </div>
