--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,3 +1,48 @@
-
+body {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  background-color: gray; }
+  body h1 {
+    font-size: 2.5em; }
+  body h2 {
+    font-size: 1.4em; }
+  body h3 {
+    font-size: 1.2em;
+    font-weight: bold; }
+  body h4 {
+    font-size: 1.1em; }
+  body header {
+    padding: 1em;
+    background-color: white;
+    color: #222; }
+    body header nav#navbar {
+      background-color: maroon !important;
+      color: white !important; }
+      body header nav#navbar a, body header nav#navbar button, body header nav#navbar input {
+        color: white !important;
+        background-color: maroon !important;
+        border-color: white !important; }
+        body header nav#navbar a:hover, body header nav#navbar button:hover, body header nav#navbar input:hover {
+          color: white !important;
+          background-color: maroon !important;
+          border-color: white !important; }
+  body main {
+    background-color: white;
+    padding: 1em;
+    color: #222; }
+  body footer {
+    background-color: white;
+    color: #222;
+    padding: 1em; }
+    body footer div {
+      background-color: white;
+      color: #222; }
+      body footer div:first-child div#footer-title {
+        padding: .5em;
+        background-color: maroon;
+        color: white;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: .25em; }
 
 /*# sourceMappingURL=core.css.map */
