--- a/public/tpl/header.html.twig
+++ b/public/tpl/header.html.twig
@@ -1,20 +1,21 @@
 
 
-<header>
   <!--
     BARRE DE NAVIGATION
   -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#"><img src="{{ sitelogo }}" alt="logo"></a>
+  <nav id="navbar" class="navbar navbar-light navbar-expand-lg bg-light fixed-top d-flex justify-content-between">
 
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <a class="navbar-brand" href="#"><img src="{{ sitelogo }}" alt="{{ sitetitle }} logo"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <form class="form-inline ">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -25,15 +26,15 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">login</a>
             <a class="dropdown-item" href="#">create account</a>
-            <!-- <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a> -->
+            <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
-
         </ul>
       </div>
     </nav>
 
-
-
-</header>
+    <div>
+      <h1>{{ sitetitle }}</h1>
+      <p>{{ sitedescription }}</p>
+    </div>
