affichage films soumis espace membre

--- a/public/tpl/profil.html.twig
+++ b/public/tpl/profil.html.twig
@@ -29,6 +29,8 @@
                 <div class="col-6">
                     <h3>Mes films :</h3>
                     <!-----------faire s'afficher les films soumis------------->
+                    <img src="../../upload {{ data }}">
+
                 </div>
                 <div class="col-6">
                     <h3>Je propose un film :</h3>
