Suppression des includes twig et ajout des héritages twig. (inversion logique)

--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="{{siteLang}}" dir="ltr">
   <head>
@@ -11,13 +10,13 @@
   </head>
   <body id="body" class="container-fluid">
     <header id="header" class="container-fluid">
-      {% include 'header.html.twig' ignore missing %}
+      {% include 'modelspages/header.html.twig' ignore missing %}
     </header>
     <main id="main" class="container-fluid">
-        {% include includeContent ignore missing %}
+
     </main>
     <footer id="footer" class="container-fluid">
-      {% include 'footer.html.twig' ignore missing %}
+      {% include 'modelspages/footer.html.twig' ignore missing %}
     </footer>
     <script src="public/js/core.js">
     </script>
