--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -1,2 +1,5 @@
+{% extends "modelspages/index.html.twig" %}
 
-  <h2>{{ sitetitle }}</h2>
+  {% block main %}
+    <h2>{{ sitetitle }}</h2>
+  {% endblock %}
