--- a/public/tpl/modelspages/header.html.twig
+++ b/public/tpl/modelspages/header.html.twig
@@ -1,40 +1,5 @@
 
-
-  <!--
-    BARRE DE NAVIGATION
-  -->
-  <nav id="navbar" class="navbar navbar-light navbar-expand-lg bg-light fixed-top d-flex justify-content-between">
-
-    <a class="navbar-brand" href="#"><img src="{{ sitelogo }}" alt="{{ sitetitle }} logo"></a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <form class="form-inline ">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Login
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">login</a>
-            <a class="dropdown-item" href="#">create account</a>
-            <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div>
+    <div id="header-defaut">
       <h1>{{ sitetitle }}</h1>
       <p>{{ sitedescription }}</p>
     </div>
