--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -9,15 +9,21 @@
     <link rel="stylesheet" href="public/css/core.css">
   </head>
   <body id="body" class="container-fluid">
+
+    {% include 'modelspages/navbar.html.twig' ignore missing %}
+    
     <header id="header" class="container-fluid">
       {% include 'modelspages/header.html.twig' ignore missing %}
     </header>
+
     <main id="main" class="container-fluid">
 
     </main>
+
     <footer id="footer" class="container-fluid">
       {% include 'modelspages/footer.html.twig' ignore missing %}
     </footer>
+
     <script src="public/js/core.js">
     </script>
   </body>
