--- a/public/tpl/home.html.twig
+++ b/public/tpl/home.html.twig
@@ -1,7 +1,65 @@
 {% extends "modelspages/index.html.twig" %}
 
-
-
   {% block main %}
-    <h2>{{ sitetitle }}</h2>
+
+
+  {% if genres %}
+
+    <h2>Rechercher</h2>
+
+    {% for genre in genres %}
+
+      <a href="./home.html/genre/{{genre}}">
+        {{ genre }}
+      </a>
+
+    {% endfor %}
+  {% endif %}
+
+
+
+    {% if films %}
+
+      <h2>A l'affiche</h2>
+
+      {% for key,film in films %}
+
+        <a href="./home.html/{{film.titre}}">
+          <h3> {{ film.titre }} </h3>
+          <img src="public/images/{{ film.affiches }}.jpg">
+          <p> {{ film.genre }} </p>
+        </a>
+
+      {% endfor %}
+    {% endif %}
+
+
+    {% if film %}
+
+      <h2> {{ film.titre }} </h2>
+      <img src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
+      <p> {{ film.description }} </p>
+      <p> {{ film.genre }} </p>
+
+    {% endif %}
+
+
+    {% if filmsrecherches %}
+
+        <h2>selecionnés</h2>
+
+        {% for key,film in filmsrecherches %}
+
+          <a href="../{{film.titre}}">
+            <h3> {{ film.titre }} </h3>
+            <img src="{{ docRoot }}public/images/{{ film.affiches }}.jpg">
+            <p> {{ film.genre }} </p>
+          </a>
+
+
+
+        {% endfor %}
+
+      {% endif %}
+
   {% endblock %}
