--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -1,30 +1,31 @@
 
 <!DOCTYPE html>
-<html lang="{{siteLang}}" dir="ltr">
+<html lang="{{ siteLang }}" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>{{ sitetitle }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/css/core.css">
+    <link rel="stylesheet" href="{{ docRoot }}public/css/core.css">
   </head>
   <body id="body" class="container-fluid">
 
-    {% include 'modelspages/navbar.html.twig' ignore missing %}
-    
+
+
     <header id="header" class="container-fluid">
+        {% include 'modelspages/navbar.html.twig' ignore missing %}
       {% include 'modelspages/header.html.twig' ignore missing %}
     </header>
 
     <main id="main" class="container-fluid">
-
+      {% block main %}{% endblock %}
     </main>
 
     <footer id="footer" class="container-fluid">
       {% include 'modelspages/footer.html.twig' ignore missing %}
     </footer>
 
-    <script src="public/js/core.js">
+    <script src="{{ docRoot }}public/js/core.js">
     </script>
   </body>
 </html>
