Petits ajustements, ficher database cafeinline.sql corrigé.

--- a/public/tpl/modelspages/header.html.twig
+++ b/public/tpl/modelspages/header.html.twig
@@ -1,5 +1,7 @@
 
+  <a href="{{ docRoot }}">
     <div id="header-defaut">
       <h1>{{ sitetitle }}</h1>
       <p>{{ sitedescription }}</p>
     </div>
+  </div>
