Intégration des formulaires connexions, inscription, déconnexion, etc. Merci Marie-Ange. ^^

--- a/public/tpl/modelspages/header.html.twig
+++ b/public/tpl/modelspages/header.html.twig
@@ -1,5 +1,5 @@
 
-  <a href="{{ docRoot }}">
+  <a href="./{{ docRoot }}">
     <div id="header-defaut">
       <h1>{{ sitetitle }}</h1>
       <p>{{ sitedescription }}</p>
