--- a/public/tpl/404.html.twig
+++ b/public/tpl/404.html.twig
@@ -1,4 +1,8 @@
-<h4>
-  404
-</h4>
-<p>Contenu non trouvé</p>
+{% extends "modelspages/index.html.twig" %}
+{% block main %}
+
+  <h4>
+    404
+  </h4>
+  <p>Contenu non trouvé</p>
+{% endblock %}
