--- a/public/tpl/connexion.html.twig
+++ b/public/tpl/connexion.html.twig
@@ -1,25 +1,28 @@
+{% extends "modelspages/index.html.twig" %}
+{% block main %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <h2>CONNECTEZ-VOUS</h2>
-        </div>
-    </div>
+  <div class="container">
+      <div class="row">
+          <div class="col-12">
+              <h2>CONNECTEZ-VOUS</h2>
+          </div>
+      </div>
 
-    <div class="row">
-        <div class="col-6">
-            <form method="post" action="">
-                <label>Identifiant (email)</label><br>
-                <input type="text" name="mailconnect" placeholder="Mail" value="{%if email is defined%} {{ mail1 }} {%endif%}">
-        </div>
-        <div class="col-6">
-            <label for="password">Mot de passe :</label><br>
-            <input type="password" name="mdpconnect">
-        </div>
-    </div>
-    <button type="submit" value="submit">Soumettre</button>
-    </form>
+      <div class="row">
+          <div class="col-6">
+              <form method="post" action="">
+                  <label>Identifiant (email)</label><br>
+                  <input type="text" name="mailconnect" placeholder="Mail" value="{%if email is defined%} {{ mail1 }} {%endif%}">
+          </div>
+          <div class="col-6">
+              <label for="password">Mot de passe :</label><br>
+              <input type="password" name="mdpconnect">
+          </div>
+      </div>
+      <button type="submit" value="submit">Soumettre</button>
+      </form>
 
-    {% if erreur is defined %} {{erreur}} {% endif %}
+      {% if erreur is defined %} {{erreur}} {% endif %}
 
-</div>
+  </div>
+{% endblock %}
