connexion / deconnexion debbugées. Reste à debugger profil.php !

--- a/public/tpl/edition_profil.html.twig
+++ b/public/tpl/edition_profil.html.twig
@@ -1,4 +1,5 @@
 {% extends "modelspages/index.html.twig" %}
+{% block main %}
 
 <div class="container">
 
@@ -29,3 +30,4 @@
     <!--{#{%if msg is defined%} {{ msg }} {%else header "connexion.php" %} {%endif%}#}-->
 
 </div>
+{% endblock %}
