--- a/public/tpl/modelspages/footer.html.twig
+++ b/public/tpl/modelspages/footer.html.twig
@@ -1,36 +1,34 @@
-
-  <div class="row">
+<div class="row">
 
     <div id="footer-title" class="col-12">
-      Cafe Latte © 2019
+        CAFE LATTE © 2019
     </div>
 
-  </div>
+</div>
 
-  <div class="row">
-
-    <div class="col-4">
-      <h2>Réseau sociaux</h2>
-      <ul>
-        <li>Facebook</li>
-        <li>Twitter</li>
-        <li>Linked'In</li>
-      </ul>
-
-    </div>
+<div class="row">
 
     <div class="col-4">
-      <h2>New's letter</h2>
-      <form method="post" action="newsletter.html">
-        <input type="email" name="email" placeholder="r.bidochon@fluideglacial.fr">
-        <input type="submit" value=">">
-      </form>
+        <h2>Retrouvez-nous</h2>
+        <ul>
+            <li><a href="https://facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://twitter.com"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
     </div>
 
     <div class="col-4">
-      <h2>A propos</h2>
-      <p>Abeas corpus est touti fruti. Sic transit gloria mundi. Nunc est bibendum.</p>
-      <p>Ils mangèrent des agneaux, des orangs outang. Et le seigneur fut content</p>
+        <h2>Newsletter</h2>
+        <form method="post" action="newsletter.html">
+            <input id="newsletter" type="email" name="email" placeholder="nom@email.fr">
+            <button id="btnnews" type="submit"><i class="fas fa-envelope-square"></i></button>
+        </form>
     </div>
 
-  </div>
+    <div class="col-4">
+        <h2>A propos</h2>
+        <p>Abeas corpus est touti fruti. Sic transit gloria mundi. Nunc est bibendum.</p>
+        <p>Ils mangèrent des agneaux, des orangs outang. Et le seigneur fut content</p>
+    </div>
+
+</div>
