--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -1,30 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="{{siteLang}}" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>{{ sitetitle }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/css/core.css">
-  </head>
-  <body id="body" class="container-fluid">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-    {% include 'modelspages/navbar.html.twig' ignore missing %}
-    
+
+    <link rel="stylesheet" href="public/css/core.css">
+</head>
+
+<body id="body" class="container-fluid">
+
     <header id="header" class="container-fluid">
-      {% include 'modelspages/header.html.twig' ignore missing %}
+        {% include 'modelspages/navbar.html.twig' ignore missing %} {% include 'modelspages/carousel.html.twig' ignore missing %}
     </header>
 
     <main id="main" class="container-fluid">
-
+        {% block main %} {% endblock %}
     </main>
 
     <footer id="footer" class="container-fluid">
-      {% include 'modelspages/footer.html.twig' ignore missing %}
+        {% include 'modelspages/footer.html.twig' ignore missing %}
     </footer>
 
+
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script src="public/js/core.js">
     </script>
-  </body>
+</body>
+</body>
+
 </html>
