--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -11,7 +11,7 @@
 
     <header id="header" class="container-fluid">
       {% include 'modelspages/navbar.html.twig' ignore missing %}
-      {% include 'modelspages/header.html.twig' ignore missing %}
+      {% include 'modelspages/carousel.html.twig' ignore missing %}
     </header>
 
     <main id="main" class="container-fluid">
