--- a/public/tpl/modelspages/navbar.html.twig
+++ b/public/tpl/modelspages/navbar.html.twig
@@ -28,7 +28,7 @@
               <a class="dropdown-item" href="connexion">login</a>
               <a class="dropdown-item" href="inscription">create account</a>
             {% else %}
-              <a class="dropdown-item" href="profil">Mon compte</a>
+              <a class="dropdown-item" href="edit-profil">Mon compte</a>
               <a class="dropdown-item" href="deconnexion">Déconnexion</a>
             {% endif %}
             </div>
