--- a/public/tpl/inscription.html.twig
+++ b/public/tpl/inscription.html.twig
@@ -6,7 +6,7 @@
           <h2>INSCRIVEZ-VOUS</h2>
           <div class="col-12"></div>
           <ul>En créant votre espace personnel, vous pourrez :</ul>
-          <li>commenter les films</li>
+          <!-- <li>commenter les films</li> -->
           <li>soumettre des films</li>
           <!--<li>créer une liste de favoris</li>-->
           <!--<li>donner des notes</li>-->
@@ -47,6 +47,6 @@
   </form>
 
   {% if erreur is defined %} {{erreur}} {% endif %}
-  
+
   </div>
   {% endblock %}
