--- a/public/tpl/edit-films.html.twig
+++ b/public/tpl/edit-films.html.twig
@@ -5,7 +5,7 @@
   <section class="container">
     <div class="row">
 
-        <div class="col-6">
+        <div class="col-12">
           {% if listfilmssoumis %}
             <h3>Mes films :</h3>
             <div class="row">
@@ -21,13 +21,17 @@
             </div>
           {% endif %}
         </div>
-        
-        <div class="col-6">
+
+        <div class="col-12">
             <h3>Je propose un film :</h3>
             <p>Tous les champs sont obligatoires</p>
             <form method="post" action="profil.php" enctype="multipart/form-data">
+            <input type="varchar" name="hidden" value="{{ actionForm }}" hidden>
+
+            <input type="varchar" name="hidden" value="{{ edititing.id }}" hidden>
+
                 <label>Titre du film</label><br>
-                <input type="text" name="titre" minlenght="2" maxlength="30" required><br>
+                <input type="text" name="titre" value="{{ edititing.titre }}" minlenght="2" maxlength="30" required><br>
 
                 <label>Date de sortie</label><br>
                 <input type="text" name="annee" minlenght="4" maxlength="4" required><br>
